Primary fixes Fixed: * Chrome Issues vh bug * app-popup-window z-index * Cards update css * Cards sanitizeHtmlPipe * slug_to_page fix *

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,5 +36,5 @@ h1 {
 
 app-popup-window {
   position: fixed;
-  z-index: 1;
+  z-index: 3;
 }
