--- a/src/app/components/page-not-found/page-not-found.component.scss
+++ b/src/app/components/page-not-found/page-not-found.component.scss
@@ -8,6 +8,7 @@
     border-bottom: 0 !important;
   }
 }
+
 .header {
   max-height: 350px;
   overflow: hidden;
@@ -15,7 +16,7 @@
   border-top-right-radius: 5px;
   .default-header {
     width: 100%;
-    height: 70px;
+    height: 0px;
     background-color: $bg-color-primary;
   }
 }
