--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -228,6 +228,7 @@
   .content {
     position: absolute;
     left: 0;
+    bottom: 0;
     padding: $padding;
 
     h2 {
